fix css alignment

--- a/bcgov-source/app-phocs/main/default/lwc/inspectionQuestionsParentv2/inspectionQuestionsParentv2.css
+++ b/bcgov-source/app-phocs/main/default/lwc/inspectionQuestionsParentv2/inspectionQuestionsParentv2.css
@@ -226,13 +226,11 @@
 }
 
 .question-col {
-    flex: 0 0 85%;
-    max-width: 85%;
+    flex: 5;
 }
 
 .button-col {
-    flex: 0 0 20%;
-    max-width: 10%;
+    flex: 1;
     display: flex;
     justify-content: flex-end;
 }
@@ -257,8 +255,8 @@
 
     .question-col,
     .button-col {
-        flex: 0 0 100%;
-        max-width: 100%;
+        flex: none;
+        width: 100%;
     }
 
     .button-col {
